[package]
name = "minimax"
version = "0.2.0"
authors = [ "Samuel Fredrickson <samfredrickson@gmail.com>", "Eric Roshan-Eisner <eric.d.eisner@gmail.com>" ]
description = "Generic implementations of Minimax."
documentation = "https://docs.rs/minimax"
repository = "https://github.com/edre/minimax-rs"
readme = "README.md"
keywords = ["ai", "game", "minimax", "negamax"]
license = "MIT"

[dependencies]
rand = "0.4.*"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "negamax"
harness = false

[profile.test]
opt-level = 3
