[package]
name = "minimax"
version = "0.4.0"
authors = [ "Samuel Fredrickson <samfredrickson@gmail.com>", "Eric Roshan-Eisner <eric.d.eisner@gmail.com>" ]
description = "Generic implementations of Minimax."
documentation = "https://docs.rs/minimax"
edition = "2021"
repository = "https://github.com/edre/minimax-rs"
readme = "README.md"
keywords = ["ai", "game", "minimax", "negamax"]
license = "MIT"

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
rand = "0.8"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
num_cpus = "1.0"
rayon = "^1.5"

[target.'cfg(target_arch="wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"]}

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "negamax"
harness = false

[profile.test]
opt-level = 3
